# tach-challenge

./: .env  .gitignore  Dockerfile  README.md  accounts.env  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini
accounts/: DEPLOY  __init__.py  app.py  application.py  config.py  configurer.py  cors.py  main.py
accounts/api/: accounts.py  app.py  checks.py  models.py
accounts/api/v1/routes/: accounts.py
accounts/controllers/: accounts.py
accounts/crud/: account.py
accounts/models/: accounts.py
accounts/petisco_config/: configurers.py  dependencies.py
accounts/repositories/: accounts.py
accounts/schemas/: accounts.py  base.py  query.py
accounts/src/account/shared/domain/: account.py  (+1 more)
accounts/src/checks/application/: healthcheck_controller.py
accounts/usecases/: accounts.py  errors.py
beanie_crud/: crud.py  errors.py  models.py
petisco_sanic/base/application/: async_application.py  async_application_configurer.py
petisco_sanic/base/application/patterns/: async_crud_repository.py
petisco_sanic/base/testing/: assert_http.py
petisco_sanic/extra/beanie/document/: document_base.py
petisco_sanic/extra/sanic/: __init__.py  is_sanic_available.py
petisco_sanic/extra/sanic/application/: ensure_all_routers_are_async.py  response_mocker.py  sanic_application.py
petisco_sanic/extra/sanic/controller/: as_sanic.py  sanic_async_controller.py  sanic_controller.py  sanic_default_response.py  sanic_failure_handler.py  sanic_result_mapper.py  sanic_success_handler.py
tests/: conftest.py  utils.py
tests/accounts/mothers/: account_json_mother.py  account_mother.py  account_repository_mother.py
transactions/: DEPLOY  __init__.py  application.py  config.py  configurer.py  cors.py  main.py
transactions/api/: checks.py  models.py  transactions.py
transactions/petisco_config/: configurers.py  dependencies.py
transactions/src/checks/application/: healthcheck_controller.py
transactions/tests/: test_api.py
(+42 files in other folders)
